[DREM-47]クリップ登録・解除処理
クリップ失敗を修正

Change-Id: Icd1e145aa2295193989e6bbeaf256ec9fe9afa32

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="clip_regist_error_message">のクリップに失敗しました</string>
     <string name="clip_delete_result_message">のクリップを削除しました</string>
     <string name="clip_delete_error_message">のクリップ削除に失敗しました</string>
+    <string name="epg_contents_message">番組</string>
+    <string name="vod_contents_message">ビデオ</string>
 
     <!-- Launch -->
     <string name="str_app_title">dリモート</string>
