--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -293,7 +293,7 @@
     <string name="main_setting_hikari_tv_update_message">ドコモテレビターミナルのひかりTVアプリのアップデートが必要です。</string>
     <string name="main_setting_dazn_uninstall_message">ドコモテレビターミナルのDAZNアプリはインストールされてない</string>
     <string name="main_setting_dazn_update_message">ドコモテレビターミナルのDAZNアプリのアップデートが必要です。</string>
-    <string name="main_setting_connect_error_message">接続できません</string>
+    <string name="main_setting_connect_error_message">STBとの接続に失敗しました。</string>
     <string-array name="main_setting_items">
         <item>dアカウント設定</item>
         <item>dアカウント設定</item>
