--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="clip_delete_error_message">のクリップ削除に失敗しました</string>
     <string name="epg_contents_message">番組</string>
     <string name="vod_contents_message">ビデオ</string>
+    <string name="app_finish_dialog_title">アプリ終了</string>
+    <string name="app_finish_dialog_message">アプリ終了してよろしいでしょうか</string>
 
     <!-- Launch -->
     <string name="str_app_title">dリモート</string>
@@ -325,5 +327,8 @@
     <!-- dアカウント登録 -->
     <string name="d_account_regist_error">dアカウントの処理に失敗しました。</string>
     <string name="d_account_chamge_message">dアカウントが変更されました。初期画面に戻ります。</string>
+
+    <!-- お知らせ -->
+    <string name="information_title">お知らせ</string>
 
 </resources>
