DREM-1180 [実装]([DREM-52]ヘッダー対応) 実装(×ボタン対応)・実装レビュー
マイ番組表編集画面の黒ヘッダーに対応

Change-Id: Ic8c015fcb33674aac4e948b60452c913f325d701

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -318,6 +318,7 @@
 
     <!-- MY番組表設定 -->
     <string name="my_channel_list_setting">マイ番組表設定</string>
+    <string name="my_channel_list_setting_select_channel">チャンネルを選択</string>
     <string name="my_channel_list_setting_failed_dialog_title">エラー</string>
     <string name="my_channel_list_setting_failed_dialog_content_register">登録失敗!</string>
     <string name="my_channel_list_setting_failed_dialog_content_unregister">解除失敗!</string>
