DREM-72番組表-年齢設定値によるフィルタリング
ユーザ情報により、タイトルにフィルタをかける処理を実装

Change-Id: I052e4f610bb4b004676b515cd1e880f2a80b9d1b

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="vod_contents_message">ビデオ</string>
     <string name="app_finish_dialog_title">アプリ終了</string>
     <string name="app_finish_dialog_message">アプリ終了してよろしいでしょうか</string>
+    <string name="message_three_asterisk">＊＊＊</string>
 
     <!-- Launch -->
     <string name="str_app_title">dリモート</string>
