DREM-1275 [レビュー]([DREM-8-1]ビデオ一覧(NOD))実装レビュー・動作確認及び不具合修正
コンテンツ数取得０件時の処理について対応漏れであったため修正

Change-Id: I1ccd239ecc4e591da143b5d7b7e9b6b70a030d98

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -333,4 +333,8 @@
     <!-- お知らせ -->
     <string name="information_title">お知らせ</string>
 
+    <!-- ビデオ一覧 -->
+    <string name="video_list_genre_all">すべて</string>
+    <string name="video_list_genre_nod">ＮＯＤ</string>
+
 </resources>
