--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
     <string name="remote_controller_viewpager_watch_by_tv">テレビで視聴する</string>
 
     <!-- Home -->
+    <string name="home_header_title">ホーム</string>
     <string name="now_on_air_list">NOW ON AIR</string>
     <string name="recommend_list_title">おすすめ番組・ビデオ</string>
     <string-array name="recommend_list_tab_names">
