--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -348,4 +348,7 @@
     <string name="video_list_genre_all">すべて</string>
     <string name="video_list_genre_nod">ＮＯＤ</string>
 
+    <!-- H4d契約情報取得 -->
+    <string name="h4d_agreement_change">契約状態が変更されたため、トップ画面に戻ります。</string>
+
 </resources>
