DREM-1249 [単体]([DREM-55]H4d契約情報取得)UnitTest(不具合修正)・レビュー
単体テストで発見された問題を修正しました。

Change-Id: I5128a6b6808d98caa9abf2f25d09264b87407998

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -333,4 +333,7 @@
     <!-- お知らせ -->
     <string name="information_title">お知らせ</string>
 
+    <!-- H4d契約情報取得 -->
+    <string name="h4d_agreement_change">契約状態が変更されたため、トップ画面に戻ります。</string>
+
 </resources>
