--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="str_app_title">dリモート</string>
     <string name="str_launch_title">起動画面</string>
     <string name="str_tutorial_title">チュートリアル画面</string>
+    <string name="str_get_info_title">情報取得中</string>
     <string name="str_stb_select_title">STB選択</string>
     <string name="str_stb_select_result_text">ペアリング可能なデバイスが\n見つかりました。</string>
     <string name="str_stb_next_not_display_text">\t次回以降表示しない</string>
