--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -352,7 +352,7 @@
 
     <!-- ビデオ一覧 -->
     <string name="video_list_genre_all">すべて</string>
-    <string name="video_list_genre_nod">ＮＯＤ</string>
+    <string name="video_list_genre_nod">NHKオンデマンド</string>
 
     <!-- H4d契約情報取得 -->
     <string name="h4d_agreement_change">契約状態が変更されたため、トップ画面に戻ります。</string>
