DREM-1105 [DREM-24-2]録画予約一覧(xx:xx現在の時刻表記をSTBの情報取得時刻に変更) 取得時間表記をデザイン仕様通りに修正します
Change-Id: Ifb6942fd7c0001d2d4721f33112af2b9a76d1c07

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -114,7 +114,7 @@
     <string name="recording_reservation_list_error_toast">録画予約一覧取得失敗</string>
     <string name="recording_reservation_status_accepting">受付中</string>
     <string name="recording_reservation_status_accept_failure">受付失敗</string>
-    <string name="recording_reservation_list_update_time">[取得時刻]</string>
+    <string name="recording_reservation_list_update_time">現在</string>
 
     <!-- クリップ一覧 -->
     <string name="str_clip_activity_title">クリップ</string>
