[DREM-35]レイアウト指示書の適用
視聴中ビデオ一覧レイアウト修正

Change-Id: If2bd59572cc6a818c24d37358a0c8fa18389ec55

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -140,7 +140,7 @@
     </string-array>
 
     <!-- WatchingVideoActivity -->
-    <string name="str_watching_video_activity_title">視聴中ビデオ一覧</string>
+    <string name="str_watching_video_activity_title">視聴中ビデオ</string>
 
     <!-- TvProgram -->
     <string-array name="tv_program_list_tab_names">
@@ -234,7 +234,7 @@
 
     <!-- 検索画面 Begin -->
     <string name="search_load_finish">load finished</string>
-    <string name="search_loading">loading...</string>
+    <string name="search_loading">loading&#8230;</string>
     <!--  検索画面 End  -->
 
     <!-- レンタル -->
