DREM-266   ビデオランキング DREM-265  週間テレビランキング
ジャンルの残タスク対応

Change-Id: Iccc38ded7c4a45b8d7e317099af2f84f747cc3fc

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -187,12 +187,7 @@
     <string name="video_ranking_title">ビデオランキング</string>
     <string name="common_ranking_enter">\n</string>
     <string name="contents_header">　></string>
-    <string-array name="ranking_tab_names">
-        <item>総合</item>
-        <item>海外映画</item>
-        <item>国内映画</item>
-        <item>海外TV番組・ドラマ</item>
-    </string-array>
+    <string name="common_ranking_tab_all">総合</string>
 
     <string name="tv_icon_description">テレビアイコン</string>
     <string name="menu_icon_description">メニューアイコン</string>
