DREM-572 (Sprint5レビューのフィードバック) ランキングトップ（サムネイル、エッジ効果）
ホーム画面とランキングトップ画面のrecycleViewに対し、横スクロールでエッジ効果が表示されるように修正。
（縦スクロールではもともとエッジ効果が表示されていたため変更なし）

Change-Id: I45bac79e75c372df025f753f72baed2d0fc7c5c3

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="close_key">×</string>
     <string name="list_transition">></string>
     <string name="contents_hyphen">-</string>
-    <string name="contents_more">more</string>
+    <string name="contents_more">すべてを見る</string>
     <string name="positive_response">はい</string>
     <string name="negative_response">いいえ</string>
     <string name="custom_dialog_ok">OK</string>
