DREM-609[DREM-46-2]A-PAB要件(外部出力制御)
Change-Id: I77b972fbfe11bb328ea0bcd48cea5da1359fa369

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -303,6 +303,7 @@
     <string name="contents_detail_contract_button_vod">ドコモテレビターミナルで購入する</string>
     <string name="contents_detail_contract_text_ch">このチャンネルをご覧になるにはドコモテレビターミナル側での契約が必要です。</string>
     <string name="contents_detail_contract_button_ch">ドコモテレビターミナルで契約する</string>
+    <string name="contents_detail_external_display_dialog_msg">外部出力が検知されたため再生を停止します。</string>
 
     <!-- チャンネルリストタイトル -->
     <string name="channel_list_activity_title">チャンネルリスト</string>
