DREM-1394[実装]([DREM-35]レイアウト指示書の適用)録画番組 レビュー指摘対応 Change-Id: I7ffc1d609d2d969f1719b17eef4eeb0783492b5d

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -161,6 +161,13 @@
         <item>持ち出し</item>
     </string-array>
     <string name="tv_program_change_mode">&lt; &gt;</string>
+    <string name="record_download_status">ダウンロード中</string>
+    <string name="record_download_percent_mark">%</string>
+    <string name="record_download_error_message">取得に失敗しました</string>
+    <string name="record_download_delete_title">削除してもよろしいでしょうか？</string>
+    <string name="record_download_cancel_title">ダウンロードを取りやめますか？</string>
+    <string name="record_download_cancel_confirm">取りやめる</string>
+    <string name="record_download_notification">録画番組をダウンロード中</string>
     <!-- Video -->
     <string name="video_content_top_title">ビデオ</string>
     <string name="video_content_all_title">すべて</string>
