DREM-1449 DREM-1450 [実装]([DREM-1-5]ホーム画面(最新仕様の反映)) Newアイコンの判定と、UI表示実装. チェックスタイル対策
Change-Id: I3e910a9fe1772b0a466473ba610580c8625808e9

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="parental_r_15">R15</string>
     <string name="parental_r_18">R18</string>
     <string name="parental_r_20">R20</string>
+    <string name="new_icon_text">NEW</string>
     <string name="common_text_close">閉じる</string>
     <string name="common_text_retry">リトライ</string>
 
