DREM-1392 [実装]([DREM-35]レイアウト指示書の適用)ホーム画面 DREM-1406 [実装]([DREM-35]レイアウト指示書の適用)ランキング一覧 DREM-1404 [実装]([DREM-35]レイアウト指示書の適用)コンテンツ詳細画面
先ほどsubmit時にconflictしたため再度commitします。
また、ランキング一覧画面のコンテンツ上の情報表示とコンテンツ詳細画面のサムネイルにも対応しました。

Change-Id: I3acc45ad4b8597650ff5907f472892c4c5b9f668

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -127,6 +127,13 @@
     <string name="home_no_contract_info_text">ご利用中のdアカウントでひかりTV for docomoの契約がありません。</string>
     <string name="home_contract_button_text">契約する</string>
     <string name="home_contents_list_see_all">すべてを見る</string>
+    <string name="home_contents_pipe">" | "</string>
+    <string name="home_contents_hyphen">" - "</string>
+    <string name="home_contents_colon">:</string>
+    <string name="home_contents_slash">/</string>
+    <string name="home_contents_front_bracket">（</string>
+    <string name="home_contents_back_bracket">）</string>
+
 
     <!-- クリップ一覧 -->
     <string name="str_clip_activity_title">クリップ</string>
